# physics-engine

./: .gitmodules  CMakeLists.txt  README.md  config.h.in
cuda-module/: CMakeLists.txt
cuda-module/include/cudamodule/: cuda_acceleration_calculation.h
cuda-module/include/cudamodule/physics/: acceleration_calculation.h  astronomical_algorithms.h
cuda-module/src/: cuda_acceleration_calculation.cu
include/physics/: acceleration_calculation_factory.h  bodies.h  bodies_system.h  position_velocity_calculation.h
res/: calc_accelerations_kernel.cl
src/: acceleration_calculation_factory.cpp  bodies_system.cpp  opencl_acceleration_calculation.cpp  opencl_acceleration_calculation.h  openmp_acceleration_calculation.cpp  openmp_acceleration_calculation.h  openmp_euler_position_velocity_calculation.cpp  openmp_euler_position_velocity_calculation.h  sequential_acceleration_calculation.cpp  sequential_acceleration_calculation.h
test/performance/: bodies_test.cpp  opencl_acceleration_calculation_test.cpp  openmp_acceleration_calculation_test.cpp  performance_tests_framework.cpp  performance_tests_framework.h  sequential_acceleration_calculation_test.cpp
test/unit/: acceleration_calculation_factory_test.cpp  bodies_test.cpp  cuda_acceleration_calculation_test.cpp  opencl_acceleration_calculation_test.cpp  openmp_acceleration_calculation_test.cpp  sequential_acceleration_calculation_test.cpp
